SSG and SSR new config

--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
   "author": "Mauro Taliente",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=production yarn ts-node ./server",
-    "generate": "vite build --outDir dist/static && yarn build:server && ts-node prerender.ts",
-    "dev:server": "nodemon --watch server.ts --watch src/server --exec 'ts-node server.ts'",
-    "dev:client": "yarn build:client && vite --config vite.config.ts dev",
-    "build": "rimraf dist && tsc -p tsconfig.prod.json && yarn build:client && yarn build:server && yarn copy-files",
-    "build:client": "vite build --outDir dist/client --ssrManifest",
-    "build:server": "vite build --ssr src/client/entry-server.tsx --outDir dist/server",
-    "copy-files": "copyfiles static/* dist/assets && copyfiles index.html dist && copyfiles -f dist/client/assets/* dist/assets",
-    "serve": "yarn build && cross-env NODE_ENV=production yarn ts-node ./server",
+    "//SSR_SCRIPTS": "[---- SSR ---]",
+    "dev:server": "nodemon --watch server.ts --watch src/server --exec 'ts-node server'",
+    "dev:client": "yarn build:ssr_client && vite --config vite.config.ts dev",
+    "build:ssr_client": "vite build --outDir dist/ssr/client --ssrManifest",
+    "build:ssr_server": "vite build --ssr src/client/entry-server.tsx --outDir dist/ssr/server",
+    "copy-files:ssr": "copyfiles static/**/* dist/ssr/assets && copyfiles index.html dist/ssr && copyfiles -u 4 dist/ssr/client/assets/* dist/ssr/assets",
+    "build:ssr": "rimraf dist/ssr && tsc -p tsconfig.prod.json && yarn build:ssr_client && yarn build:ssr_server && yarn copy-files:ssr",
+    "serve": "yarn build:ssr && cross-env NODE_ENV=production yarn ts-node server",
+    "clean:ssr": "rimraf dist/ssr",
+    "//SSG_SCRIPTS": "[---- SSG ---]",
+    "copy-files:ssg": "copyfiles -u 3 dist/ssr/assets/* dist/ssg/assets && copyfiles -u 3 dist/ssr/assets/**/* dist/ssg/assets && copyfiles -u 3 dist/ssr/assets/**/**/* dist/ssg/assets",
+    "build:ssg": "yarn clean:ssg && yarn build:ssr && yarn copy-files:ssg",
+    "generate": "yarn build:ssg && cross-env NODE_ENV=production && ts-node prerender",
+    "clean:ssg": "rimraf dist/ssg",
+    "//GLB_SCRIPTS": "[---- GLB ---]",
+    "clean": "rimraf dist/",
     "serve:local": "vite serve",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "format": "prettier --write .",
@@ -25,13 +32,14 @@
     "test:watch": "vitest --watch",
     "coverage": "vitest --coverage",
     "typecheck": "tsc --noEmit",
-    "clean": "rimraf dist/"
+    "deploy:gh-pages": "gh-pages -d dist/ssg"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "autoprefixer": "^10.4.8",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "express": "4.18.1",
     "facepaint": "^1.2.1",
     "gh-pages": "^5.0.0",
