new config improvements
- support ssr + api and ssg with ts-node

--- a/package.json
+++ b/package.json
@@ -8,31 +8,22 @@
   },
   "author": "Mauro Taliente",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "//SSR_SCRIPTS": "[---- SSR ---]",
-    "dev:server": "nodemon --watch server.ts --watch src/server --exec 'ts-node server'",
-    "dev:client": "yarn build:ssr_client && vite --config vite.config.ts dev",
-    "build:ssr_client": "vite build --outDir dist/ssr/client --ssrManifest",
-    "build:ssr_server": "vite build --ssr src/client/entry-server.tsx --outDir dist/ssr/server",
-    "copy-files:ssr": "copyfiles static/**/* dist/ssr/assets && copyfiles index.html dist/ssr && copyfiles -u 4 dist/ssr/client/assets/* dist/ssr/assets",
-    "build:ssr": "rimraf dist/ssr && tsc -p tsconfig.prod.json && yarn build:ssr_client && yarn build:ssr_server && yarn copy-files:ssr",
-    "serve": "yarn build:ssr && cross-env NODE_ENV=production yarn ts-node server",
-    "clean:ssr": "rimraf dist/ssr",
-    "//SSG_SCRIPTS": "[---- SSG ---]",
-    "copy-files:ssg": "copyfiles -u 3 dist/ssr/assets/* dist/ssg/assets && copyfiles -u 3 dist/ssr/assets/**/* dist/ssg/assets && copyfiles -u 3 dist/ssr/assets/**/**/* dist/ssg/assets",
-    "build:ssg": "yarn clean:ssg && yarn build:ssr && yarn copy-files:ssg",
-    "generate": "yarn build:ssg && cross-env NODE_ENV=production && ts-node prerender",
-    "clean:ssg": "rimraf dist/ssg",
-    "//GLB_SCRIPTS": "[---- GLB ---]",
+    "dev": "node server",
+    "build:server": "vite build --ssr src/client/entry-server.tsx --outDir dist/server",
+    "build:client": "vite build --outDir dist/client",
+    "build": "yarn run build:client && yarn run build:server",
+    "serve": "cross-env NODE_ENV=production ts-node --esm server.ts",
+    "generate": "vite build --outDir dist/static && yarn run build:server && ts-node --esm prerender.ts",
     "clean": "rimraf dist/",
-    "serve:local": "vite serve",
+    "deploy:gh-pages": "gh-pages -d dist/ssg",
+    "prettier": "prettier --write .",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "format": "prettier --write .",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "coverage": "vitest --coverage",
-    "typecheck": "tsc --noEmit",
-    "deploy:gh-pages": "gh-pages -d dist/ssg"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -47,7 +38,7 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-emotion-styles-guide": "^0.4.5",
+    "react-emotion-styles-guide": "^0.4.6",
     "react-router-dom": "^6.3.0",
     "serve-static": "^1.15.0",
     "ts-node": "^10.9.1"
@@ -58,7 +49,6 @@
     "@testing-library/react": "^13.4.0",
     "@types/color": "^3.0.3",
     "@types/compression": "1.7.2",
-    "@types/concurrently": "6.4.0",
     "@types/eslint": "8.4.6",
     "@types/express": "^4.17.13",
     "@types/facepaint": "^1.2.2",
@@ -70,8 +60,6 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
-    "concurrently": "7.3.0",
-    "copyfiles": "^2.4.1",
     "csstype": "^3.1.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
