update to facepaint mode

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node server",
+    "dev": "ts-node --esm server.ts",
     "build:server": "vite build --ssr src/client/entry-server.tsx --outDir dist/server",
     "build:client": "vite build --outDir dist/client",
     "build": "yarn run build:client && yarn run build:server",
     "serve": "cross-env NODE_ENV=production ts-node --esm server.ts",
     "generate": "vite build --outDir dist/static && yarn run build:server && ts-node --esm prerender.ts",
     "clean": "rimraf dist/",
-    "deploy:gh-pages": "gh-pages -d dist/ssg",
+    "deploy:gh-pages": "gh-pages -d dist/static",
     "prettier": "prettier --write .",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "test": "vitest",
@@ -38,7 +38,7 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-emotion-styles-guide": "^0.4.6",
+    "react-emotion-styles-guide": "^0.5.0",
     "react-router-dom": "^6.3.0",
     "serve-static": "^1.15.0",
     "ts-node": "^10.9.1"
