--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-emotion-styles-guide": "^0.5.0",
     "react-router-dom": "^6.3.0",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
