--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,13 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "useUnknownInCatchVariables": false
+    "useUnknownInCatchVariables": false,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/client/*"],
+      "#/*": ["./src/server/*"],
+    },
   },
-  "include": ["src", "types/*", "node_modules/vite/types/*"],
+  "include": [ "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
