--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "generate": "vite build --outDir dist/static && yarn run build:server && ts-node --esm prerender.ts",
     "clean": "rimraf dist/",
     "deploy:gh-pages": "gh-pages -d dist/static",
-    "prettier": "prettier --write .",
-    "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "coverage": "vitest --coverage",
@@ -34,21 +34,18 @@
     "express": "4.18.1",
     "facepaint": "^1.2.1",
     "gh-pages": "^5.0.0",
-    "nodemon": "^2.0.19",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-emotion-styles-guide": "^0.5.0",
     "react-router-dom": "^6.3.0",
     "serve-static": "^1.15.0",
-    "ts-node": "^10.9.1",
-    "vite-tsconfig-paths": "^4.0.5"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/color": "^3.0.3",
     "@types/compression": "1.7.2",
     "@types/eslint": "8.4.6",
     "@types/express": "^4.17.13",
@@ -61,17 +58,17 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
-    "csstype": "^3.1.1",
     "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-react": "^7.31.6",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jsdom": "^20.0.0",
-    "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
     "typescript": "4.8.2",
     "vite": "3.0.9",
+    "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.23.0"
   }
 }
